remove border-radius to prevent image cropping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -568,7 +568,6 @@ Disabled tag color (50% opacity): rgba(0,50,83, 0.5);*/
           margin: 0.5rem 1.5rem 0 0;
           width: 2.625rem;
           max-height: 2.625rem;
-          border-radius: 50%;
           border: solid 0.0625rem #f5f8f9;
           margin: 0.7rem 1.5rem 0 0;
           width: 2.625rem;
